--- a/CSS/interex prishtine-shkup.css
+++ b/CSS/interex prishtine-shkup.css
@@ -9,7 +9,6 @@
     --boarder:.2rem solid rgba(0,0,0,.1);
     --outline:.1rem solid rgba(0,0,0,.1);
     --outline-hover:.2rem solid var(--black)
-
 }
 
 
@@ -21,7 +20,7 @@
     outline: none; 
     border: none;
     text-decoration: none;
-    text-transform: none;
+    text-transform: capitalize;
     transition: all .2s linear;
 }
 
@@ -210,260 +209,37 @@ section{
     text-decoration: underline;
 }
 
-.home{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: url(../images/interex-bg.png) no-repeat;
-    background-position: center;
-    background-size: cover;
-    padding-top: 17rem;
-    padding-bottom: 10rem;
-}
-.home .content{
-    text-align: center;
-    width: 60rem;
-}
-.home .content h3{
-    color: var(--black);
-    font-size: 3rem;
-}
-.home .content h3 span{
-    color: var(--orange);
- 
-}
-.home .content p{
-    color: var(--light-color);
-    font-size: 1.7rem;
-    padding: 1rem 0;
-    line-height: 1.8;
-}
-
-.features .box-container{
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-gap: 1.5rem;
-}
+/* CSS for the body */
 
 
-.features .box-container .box{
-    /* padding: 3rem 2rem; */
-    padding: 5px;
-    padding-bottom: 2rem;
-    background: #fff;
-    outline: var(--outline);
-    outline-offset: -5px;
-    text-align: center;
-    box-shadow: var(--box-shadow);
-}
-
-.features .box-container .box:hover{
-    outline: var(--outline-hover);
-    outline-offset: 0rem;
-}
-
-.features .box-container .box img{
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-
-}
-.features .box-container .box h3{
-    font-size: 2.5rem;
-    line-height: 1.8;
-    color: var(--black);
-}
-
-.features .box-container .box p{
-    padding: 2rem 1rem;
-    font-size: 1.5rem;
-    line-height: 1.8;
-    color: var(--light-color);
-    padding: 1rem 0;
-}
 
 
-.products .product-slider{
-    padding: 1rem;
-}
-.products .product-slider:first-child{
-    margin-bottom: 2rem;
-}
-.products .product-slider .box{
-    background: #fff;
-    border-radius: .5rem;
-    text-align: center;
-    padding: 3rem 2rem;
-    outline-offset: -1rem;
-    outline: var(--outline);
-    box-shadow: var(--box-shadow);
-    transition: .2s linear;
-}
-
-.products .product-slider .box:hover{
-    outline-offset: 0rem;
-    outline: var(--outline);
-}
-
-.products .product-slider .box img{
-    height: 20rem;
-}
-.products .product-slider .box h3{
-    font-size: 2.5rem;
-    color: var(--black);
-}
-
-.products .product-slider .box .price{
-    font-size: 2rem;
-    color: var(--light-color);
-    padding: .5rem 0;
-}
-.products .product-slider .box .stars i{
-    font-size: 1.7rem;
-    color: var(--orange);
-    padding: .5rem 0;
-}
-
-.categories .box-conteiner{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
-    gap: 1.5rem;
-}
-
-.categories .box-conteiner .box{
-    padding: 3rem 2rem;
-    border-radius: .5rem;
-    background: #fff;
-    box-shadow: var(--box-shadow);
-    outline: var(--outline);
-    outline-offset: -1rem;
-    text-align: center;
-}
-
-.categories .box-conteiner .box:hover{
-    outline: var(--outline-hover);
-    outline-offset: 0rem;
-}
-
-.categories .box-conteiner .box img{
-    margin: 1rem 0;
-    height: 15rem;
-}
-
-.categories .box-conteiner .box h3{
-    font-size: 2rem;
-    color: var(--black);
-    line-height: 1.8;
-}
-.categories .box-conteiner .box p{
-    font-size: 1.7rem;
-    color: var(--light-color);
-    line-height: 1.8;
-}
-
-.review .review-slider{
-    padding: 1rem;
-}
-.review .review-slider .box{
-    background: #fff;
-    border-radius: .5rem;
-    text-align: center;
-    padding: 3rem 2rem;
-    outline-offset: -1rem;
-    outline: var(--outline);
-    box-shadow: var(--box-shadow);
-    transition: .2s linear;
-}
-
-.review .review-slider .box:hover{
-    outline: var(--outline-hover);
-    outline-offset: 0rem;
-}
-
-.review .review-slider .box img{
-    height: 10rem;
-    width: 10rem;
-    border-radius: 50%;
-}
-
-.review .review-slider .box p{
-    padding: 1rem 0;
-    line-height: 1.8;
-    color: var(--light-color);
-    font-size: 1.5rem;
-}
-
-.review .review-slider .box h3{
-    padding-bottom: .5rem;
-    color: var(--black);
-    font-size: 2.2rem;
-}
-
-.review .review-slider .box .stars{
-    color: var(--orange);
-    font-size: 1.7rem;
-}
-
-.blogs .box-conteiner{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
-    gap: 1.5rem;
-}
-
-.blogs .box-conteiner .box{
-    overflow: hidden;
-    border-radius: .5rem;
-    box-shadow: var(--box-shadow);
-    background: #fff;
-}
-
-.blogs .box-conteiner .box img{
-    height: 25rem;
-    width: 100%;
-    object-fit: cover;
-}
-
-.blogs .box-conteiner .box .content{
-    padding: 2rem;
-}
-
-.blogs .box-conteiner .box .content .icons{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-bottom: 1.5rem;
-    margin-bottom: 1rem;
-    border-bottom: var(--boarder);
-}
-
-.blogs .box-conteiner .box .content .icons a{
-    color: var(--light-color);
-    font-size: 1.5rem;
-}
-
-.blogs .box-conteiner .box .content .icons a:hover{
-    color:var(--black);
-}
 
 
-.blogs .box-conteiner .box .content .icons a i{
-    color: var(--orange);
-    padding-right: .5rem;
-}
 
-.blogs .box-conteiner .box .content h3{
-    line-height: 1.8;
-    color: var(--black);
-    font-size: 2.2rem;
-    padding: .5rem 0;
-}
 
-.blogs .box-conteiner .box .content p{
-    line-height: 1.8;
-    color: var(--light-color);
-    font-size: 1.5rem;
-    padding: .5rem 0;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .footer{
     background: #fff;
