--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,6 +90,17 @@ section {
     background: #fff;
     box-shadow: var(--box-shadow);
 }
+.header1 {
+    position: fixed;
+    top: 71px;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    padding: 0rem 9%;
+    background: #fff;
+    box-shadow: var(--box-shadow);
+    text-align: center;
+}
 
 .header .logo {
     font-size: 2.5rem;
